🔧 解决Git推送配置 - 配置LFS和认证
✅ 添加.gitattributes文件，支持大文件推送
✅ 清理git配置，准备重新认证

下一步：使用GitHub CLI测试推送，解决认证问题

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,11 +5,15 @@
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.7z filter=lfs diff=lfs merge=lfs -text
-*.exe filter=lfs diff=lfs merge=lfs -text
 
-# Go binaries and archives
+# Go binaries and archives - DO NOT push to git repositories
 go1.23.5.linux-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
 
 # Database files
 *.db filter=lfs diff=lfs merge=lfs -text
 *.sqlite filter=lfs diff=lfs merge=lfs -text
+
+# But keep important config files
+!config.yaml
+!config.example.yaml
+!.env.example
