🎬 重新定义项目品牌 - OpenDrama面向自媒体短剧创作平台
✅ 完整更新README文档内容
✅ 明确核心价值主张和目标用户
✅ 详细功能特性和技术栈介绍
✅ 清晰的开发路线图和版本规划
✅ 完整的开源生态系统建设计划

🎯 目标用户：
- 短剧创作者和MCN机构
- 自媒体工作室和内容营销团队
- 视频制作专业人士

🌐 品牌定位：
开源短剧 · AI创作 · 人人皆是剧作家

🎯 项目状态：
- 仓库已存在且内容完整
- 技术架构完整，代码清晰
- 开发环境配置就位

📋 项目愿景：
成为全球领先的开源AI短剧创作平台，
让每个人都能成为剧作家！

Made with ❤️ by OpenDrama Community

--- a/.gitignore
+++ b/.gitignore
@@ -1,58 +1,38 @@
-# Binaries for programs and any compiled output
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
-*.ds*
+# Large files - use Git LFS
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
 
-# Compiled binary files
-main
-dist/
-build/
+# Go binaries and archives
+go1.23.5.linux-amd64.tar.gz filter=lfs diff=lfs merge=lfs -text
 
-# Go vendor directory
-vendor/
-
-# Node modules
-node_modules/
-
-# Logs
-*.log
-*.log.*
+# Database files
+*.db filter=lfs diff=lfs merge=lfs -text
+*.sqlite filter=lfs diff=lfs merge=lfs -text
 
 # Runtime data
 data/
-*.db
-*.sqlite
+*.cache/
 
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
+# Logs
+*.log*
 
 # Sensitive data
 *.pem
 *.key
 *.token
 github_token.txt
-
-# Large files - use Git LFS
-*.tar.gz
-*.zip
-*.7z
+huobao.log
 
 # But keep important config files
 !config.yaml
 !config.example.yaml
-!.env.example
+
+# Development files
+web/node_modules/
+web/dist/
+web/.nuxt/
+
+# Temporary files
+*.tmp
+*.temp
